# CityLife

./: .clang-format  .gitignore  CMakeLists.txt
include/bank/: bank.h
include/center/: center.h
include/controller/: controller.h
include/health/: health.h
include/object/: object.h
include/thing/: thing.h
include/view/: view.h
include/world/: world.h
src/: main.cpp
src/center/: center.cpp
src/controller/: controller.cpp
src/object/: object.cpp
src/thing/: thing.cpp
src/view/: view.cpp
src/world/: world.cpp
